# SpecTech

./: .gitignore  AddActorCommand_8h_source.html  BaseCommand_8h_source.html  Callback_8h_source.html  Doxyfile  EndRenderCommand_8h_source.html  FilterData_8h_source.html  FilterOptionInterface_8h_source.html  FilterType_8h_source.html  ModelPartList_8h.html  ModelPartList_8h_source.html  ModelPart_8cpp.html  ModelPart_8h.html  ModelPart_8h_source.html  README.md  RefreshRenderCommand_8h_source.html  RemoveActorCommand_8h_source.html  RenderThread_8h_source.html  UpdateColourCommand_8h_source.html  UpdateFilterListCommand_8h_source.html  UpdatePropertyCommand_8h_source.html  UpdateRotationSpeedCommand_8h_source.html  UpdateVisibilityCommand_8h_source.html  Utils_8h_source.html  annotated.html  annotated_dup.js  classClipFilterOption-members.html  classClipFilterOption.html  classClipFilterOption.js  classCommands_1_1AddActorCommand-members.html  classCommands_1_1AddActorCommand.html  classCommands_1_1AddActorCommand.js  classCommands_1_1BaseCommand-members.html  classCommands_1_1BaseCommand.html  classCommands_1_1BaseCommand.js  classCommands_1_1EndRenderCommand-members.html  classCommands_1_1EndRenderCommand.html  classCommands_1_1EndRenderCommand.js  classCommands_1_1RefreshRenderCommand-members.html  classCommands_1_1RefreshRenderCommand.html  (+109 more)
.github/workflows/: doxygen-deploy.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  (+35 more)
source/: CMakeLists.txt  Combinear.qss  Copyright.txt  Icons.qrc  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  Resource.aps  Resource.rc  Utils.cpp  Utils.h  VRICON.APS  VRICON.rc  filteroption.cpp  filteroption.h  filteroption.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  optiondialogwithlist.cpp  optiondialogwithlist.h  optiondialogwithlist.ui
source/Filters/: FilterData.h  FilterOptionInterface.h  FilterType.h  clipfilteroption.cpp  clipfilteroption.h  clipfilteroption.ui  shrinkfilteroption.cpp  shrinkfilteroption.h  shrinkfilteroption.ui
source/RenderThread/: Callback.cpp  Callback.h  RenderThread.cpp  RenderThread.h  VRRenderThread.cpp  VRRenderThread.h
source/RenderThread/Commands/: AddActorCommand.cpp  AddActorCommand.h  BaseCommand.cpp  BaseCommand.h  EndRenderCommand.cpp  EndRenderCommand.h  RefreshRenderCommand.cpp  RefreshRenderCommand.h  RemoveActorCommand.cpp  RemoveActorCommand.h  UpdateColourCommand.cpp  UpdateColourCommand.h  UpdateFilterListCommand.cpp  UpdateFilterListCommand.h  UpdatePropertyCommand.cpp  UpdatePropertyCommand.h  UpdateRotationSpeedCommand.cpp  UpdateRotationSpeedCommand.h  UpdateVisibilityCommand.cpp  UpdateVisibilityCommand.h
